# AI-testing

./: .env.enhanced  .env.example  .gitignore  DEVELOPMENT_PLAN.md  ISSUES.md  Makefile  Makefile.add  PATCH_NOTES.md  README.md  README_ADD_BATCH5.txt  README_AGENTS.md  README_BATCH1.md  README_BATCH10.md  README_BATCH3.md  README_BATCH4.md  README_BATCH5.md  README_BATCH6_UI.md  README_BATCH8_9.md  README_CONSOLIDATED.md  README_DELTA_v090.md  README_DELTA_v092.md  README_DELTA_v095.md  README_DELTA_v096.md  README_DELTA_v097.md  README_DELTA_v120.md  README_DELTA_v130.md  README_DELTA_v142.md  README_DELTA_v151.md  README_DELTA_v152.md  README_DELTA_v153.md  README_DELTA_v154.md  README_DELTA_v155.md  README_DELTA_v156.md  README_DELTA_v157.md  README_RECOVER.md  SUMMARY.md  __init__.py  apply_all_patches.sh  audit_ci_hint_v154.txt  docker-compose.yml  (+7 more)
orchestrator/: .env.append.example  .env.example  Dockerfile  __init__.py  alembic.ci.ini  alembic.ini  app.py  app_v2.py  auth.py  bootstrap_extras.py  brain.py  config.py  database.py  db.py  llm_controller.py  logging_setup.py  models.py  pyproject.toml  requirements-extra.txt  requirements.txt  settings.py  tenancy.py
orchestrator/Services/: __init__.py  agent_manager.py  report_generator.py  scheduler.py
orchestrator/agent_sdk/: __init__.py  base.py  http.py
orchestrator/alembic/: README  __init__.py  env.py  env_ci.py
orchestrator/brain/: __init__.py  plan_engine.py
orchestrator/models/: __init__.py  agent.py  artifact.py  base.py  engagement.py  finding.py  job.py  membership.py  plan.py  report.py  run.py  tenant.py  user.py
orchestrator/reports/: render.py  (+1 more)
(+928 files in other folders)
